refactor: 새로운 리스트를 주입하기보다는 이미 존재하는 List를 컨트롤 하는 방식을 선택